@@ -98,7 +98,7 @@ sub write {
     return 1;
 }
 
-no Moose ;
+no Any::Moose ;
 __PACKAGE__->meta->make_immutable ;
 
 1;
